[package]
name = "websocket"
version = "0.1.0"
authors = ["yanjunting <lyqingye@wokoworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
url = "2.0.0"
log = "0.4"
env_logger = "0.8"
async-std = { version = "1.0", features = ["attributes", "unstable"] }
tokio = { version = "1.0", features = ["full"] }
async-tungstenite = {version = "0.14.0", features = ["async-std-runtime"] }
